# MAI_REST

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  WeaterServer.cpp  WeaterServer.h  WeaterServerForecast.cpp  WeaterServerForecast.h  main.cpp
